examples/datalog/12_errors/03_duplicate_kg_error.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_dup_err
Knowledge graph 'test_dup_err' created.
Switched to knowledge graph: test_dup_err
> .kg use test_dup_err
Switched to knowledge graph: test_dup_err
> .kg create test_dup_err
Script error: Knowledge graph already exists: test_dup_err
